# file-catalog

./: .env.example  .gitignore  .pre-commit-config.yaml  .review_context.txt  AGENTS.md  README.md  TODO.md  a.scpt  all_pr_comments_v2.json  app.py  benchmark.py  benchmark2.py  benchmark3.py  benchmark4.py  benchmark5.py  benchmark6.py  benchmark7.py  benchmark8.py  benchmark9.py  benchmark_async.py  check_syntax.py  dummy.txt  file_catalog.db  file_catalog.db-shm  file_catalog.db-wal  main.py  pr_body.md  pr_comments.json  push_and_resolve.py  push_final.py  pyproject.toml  run_pi_fix.sh  run_pi_review.sh  scratch_response.json  test_enum.py  test_log.txt  test_token.py  test_token2.py  test_v2_catalog.db  threads_debug.json  (+2 more)
.agents/skills/cleanup/: SKILL.md
.agents/skills/code-analyzer/: SKILL.md
.agents/skills/create-pull-request/: SKILL.md
.agents/skills/fix-comments/: SKILL.md
.agents/skills/prepare-submission/: SKILL.md
.agents/skills/request-review/: SKILL.md
.agents/skills/sync-main/: SKILL.md
.agents/skills/validate-resolutions/: SKILL.md
.agents/workflows/: cleanup.md  fix-pr-comments.md  ready.md  submit-pr.md
.gemini/policies/: allow-python.toml
.github/workflows/: ci.yml  gatekeeper.yml
.hermes/plans/: 2026-05-25_170000-resolve-copilot-threads.md
docs/: PRD.md
src/: scanner.py
src/core/: analyzer_names.py  config.py  file_type.py  judge.py  mbox_utils.py  plugin_registry.py  task_engine.py  text_utils.py
src/db/: engine.py  fts.py  models.py
src/file_catalog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/llm/: factory.py  gemini.py  llama_cpp.py  mlx_provider.py  openai.py  provider.py
src/plugins/: audio_transcriber.py  deep_summarizer.py  document_ai_extractor.py  duplicate_detector.py  email_parser.py  estate_analyzer.py  language_detector.py  metadata.py  ocr_confidence_scorer.py  ocr_extractor.py  password_extractor.py  pii_harvester.py  router.py  spreadsheet_analyzer.py  summarizer.py  text_extractor.py  video_analyzer.py  vision_analyzer.py
src/scripts/: README.md  convert_doc_to_docx.scpt  convert_doc_to_pdf.scpt  delete_duplicates.py  evaluate_summaries.py  extract_and_cleanup_archives.py  extract_and_cleanup_mbox.py  inspect_file.py  invalidate_failed_tasks.py  perf_test_llms.py  remove_xml_records.py  report_failures.py  scan_text_failures.py  sync_fts.py
src/ui/: __init__.py  snippets.py
test_data/: doc2_no_ext
tests/: conftest.py  test_app_logic.py  test_archive_cleanup.py  test_config.py  test_db_models.py  test_deep_summarizer.py  test_delete_duplicates.py  test_doc_extractor.py  test_duplicate_detector.py  test_email_parser.py  test_estate_analyzer.py  test_extract_mbox.py  test_factory.py  test_file_type.py  test_fts.py  test_gemini.py  test_judge.py  test_judge_tracking.py  test_language_detector.py  test_llama_cpp.py  test_mbox_utils.py  test_metadata.py  test_mime_balancing.py  test_ocr_confidence_scorer.py  test_ocr_extractor.py  test_openai.py  test_password_extractor.py  test_pii_harvester.py  test_plugin_registry.py  test_priority_queueing.py  test_router.py  test_scanner.py  test_spreadsheet_analyzer.py  test_summarizer.py  test_task_engine.py  test_text_extractor.py  test_text_utils.py
